--- a/style1.css
+++ b/style1.css
@@ -6,15 +6,26 @@ header h1 {
   text-align: center;
 }
 
-section {
-  width: 100%;
-}
-
-section.text-content {
-  width: 75%;
+header#scores {
+  width: 40%;
   margin: 0 auto;
   display: flex;
-  border: 1px solid black;
+  justify-content: space-evenly;
+}
+
+header div h2, div {
+  text-align: center;
+}
+
+section {
+  width: 100%;
+  margin-top: 2em;
+}
+
+section#text-content {
+  width: 75%;
+  margin: 0 auto;
+  text-align: center;
 }
 
 button.start-btn {
@@ -23,7 +34,7 @@ button.start-btn {
 }
 
 main {
-  border: 1px solid black;
+  margin-top: 2em;
   display: none;
 }
 
@@ -32,7 +43,6 @@ main {
   justify-content: space-evenly;
   width: 80%;
   margin: 0 auto;
-  border: 1px solid red;
 }
 
 button {
