--- a/style1.css
+++ b/style1.css
@@ -1,5 +1,12 @@
 body {
   font-family: Calibri, sans-serif;
+  background-color: #edf2f9;
+}
+
+/*Headers*/
+
+header#title-header {
+  margin-top: 3%;
 }
 
 header h1 {
@@ -13,8 +20,23 @@ header#scores {
   display: none;
 }
 
+header#scores h2 {
+  font-size: 0.9em;
+}
+
+#player-score, #comp-score {
+  font-size: 3em;
+}
+
 header div h2, div {
   text-align: center;
+}
+
+/*Main Section*/
+
+main {
+  margin-top: 2em;
+  display: none;
 }
 
 section {
@@ -26,23 +48,14 @@ section#text-content {
   width: 75%;
   margin: 0 auto;
   text-align: center;
+  margin-top: 0;
 }
 
-button.start-btn {
-  margin: 0 auto;
-  display: block;
+section#start-section {
+  margin-top: 5%;
 }
 
-button.end-btn {
-  display: none;
-  margin: 0 auto;
-  text-align: center;
-}
-
-main {
-  margin-top: 2em;
-  display: none;
-}
+/*Buttons*/
 
 .btn-container {
   display: flex;
@@ -54,6 +67,44 @@ main {
 button {
   height: 100px;
   width: 200px;
-  /*background-color: green;*/
   border-radius: 10px;
+  border: none;
+  font-size: 1.5em;
+  font-style: italic;
+  font-family: fantasy;
+  cursor: pointer;
+  transition: 0.3s;
+  color: #515151;
+}
+
+button:hover {
+  transform: scale(1.05);
+  color: black;
+}
+
+button.start-btn {
+  margin: 0 auto;
+  display: block;
+}
+
+button.start-btn:hover {
+  background-color: #c4c4c4;
+}
+
+button.end-btn {
+  display: none;
+  margin: 0 auto;
+  text-align: center;
+}
+
+button.btn-rock:hover {
+  background-color: #896a6a;
+}
+
+button.btn-paper:hover {
+  background-color: #b4bdc6;
+}
+
+button.btn-scissors:hover {
+  background-color: #c9d6ad;
 }
